--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,6 +15,8 @@
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
+        <dozer.version>6.4.0</dozer.version>
+        <model.version>3.1.1</model.version>
     </properties>
 
     <dependencies>
@@ -39,6 +41,17 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.dozermapper</groupId>
+            <artifactId>dozer-core</artifactId>
+            <version>${dozer.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>${model.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
